--- a/kindAnimal/static/css/base.css
+++ b/kindAnimal/static/css/base.css
@@ -23,6 +23,10 @@ ul {
 }
 
 /* HEADER */
+#nvbBrand {
+  color: black;
+  text-decoration: none;
+}
 .header-area {
   position: relative;
   top: 0;
