--- a/mainPage/templates/mainPage.html
+++ b/mainPage/templates/mainPage.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block import %}
     {% load staticfiles %}
-    <link rel="stylesheet" href="{% static "css/kindAnimal.css" %}" >
+    <link rel="stylesheet" href="{% static "css/mainPage.css" %}" >
 {% endblock %}
 
 {% block contents %}
     <div class="container">
-        <h1>animalKind</h1>
+        <h1>mainPage</h1>
     </div>
 {% endblock %}
