--- a/likelionProject/templates/base.html
+++ b/likelionProject/templates/base.html
@@ -26,13 +26,13 @@
     <body>
         <header class="header-area nvb-fade" id="header">
             <nav class="nvb">
-                <a class="nvb-brand" id="nvbBrand">LIKELIONS</a>
+                <a class="nvb-brand" id="nvbBrand" href="/">LIKELIONS</a>
                 <a class="nvb-toggler" id="toggleBtn"><i class="fa fa-bars"></i></a>
                 <div class="nvb-m" id="menu">
-                    <div class="nav-item"><a class="nav-link" id="nvbAbout" href="/">Kind</a></div>
+                    <div class="nav-item"><a class="nav-link" id="nvbAbout" href="{% url 'kindAnimal' %}">Kind</a></div>
 				    <div class="nav-item"><a class="nav-link" id="nvbService">Personal</a></div>
-				    <div class="nav-item"><a class="nav-link" id="nvbPortfolio">Animal goods</a></div>
-				    <div class="nav-item"><a class="nav-link" id="nvbReview">Animal Shop</a></div>
+				    <div class="nav-item"><a class="nav-link" id="nvbPortfolio" href="{% url 'animalGoods' %}" >Animal goods</a></div>
+				    <div class="nav-item"><a class="nav-link" id="nvbReview" href="{% url 'animalShop' %}" >Animal Shop</a></div>
                 </div>
             </nav>
         </header>
