--- a/likelionProject/templates/base.html
+++ b/likelionProject/templates/base.html
@@ -11,7 +11,7 @@
         
         <!-- icon -->
 	    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
+        
         <!-- fonts -->
 	    <link href="https://fonts.googleapis.com/css?family=Heebo|Noto+Sans+KR" rel="stylesheet">
 
@@ -33,6 +33,8 @@
 				    <div class="nav-item"><a class="nav-link" id="nvbService">Personal</a></div>
 				    <div class="nav-item"><a class="nav-link" id="nvbPortfolio" href="{% url 'animalGoods' %}" >Animal goods</a></div>
 				    <div class="nav-item"><a class="nav-link" id="nvbReview" href="{% url 'animalShop' %}" >Animal Shop</a></div>
+                    <div class="nav-item"><a class="nav-link" id="nvbSignIn" href="{% url 'signin' %}" >SignIn</a></div>
+                    <div class="nav-item"><a class="nav-link" id="nvbSignUp" href="{% url 'signup' %}" >SignUp</a></div>
                 </div>
             </nav>
         </header>
