--- a/accounts/templates/signin.html
+++ b/accounts/templates/signin.html
@@ -6,29 +6,52 @@
 {% endblock %}
 
 {% block contents %}
-    <br>
-    <div style="text-align:center">
-        <h2>Sign in to Likelion & Team</h2>
-    </div>
+    <div class="container" style="margin-top:10px;">
+        <div class="card">
+            <article class="card-body mx-auto" style="max-width: 400px;">
+                <div style="text-align:center;">
+                    <img class="catsize" src="{% static 'assets/signcat.png' %}" alt="">
+                    <img class="dogsize" src="{% static 'assets/signdog.png' %}" alt="">
+                    <img style="width:45px;" src="{% static 'assets/signcat1.png' %}" alt="">
+                    <img style="width:45px;" src="{% static 'assets/signdog1.png' %}" alt="">
+                </div>
+                <h4 class="card-title mt-3 text-center">Sign in</h4>
+                <p class="text-center">Get started Login</p>
+                <p>
+                    <a href="" class="btn btn-block btn-outline-info"> <i class="fab fa-twitter"></i>   Login via Twitter</a>
+                    <a href="" class="btn btn-block btn-outline-primary"> <i class="fab fa-facebook-f"></i>   Login via facebook</a>
+                </p>
+                <hr>
+                <form>
+                   	<div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                            </div>
+                            <input name="" class="form-control" placeholder="Email or login" type="email">
+                        </div> 
+                    </div> 
 
-    <div class="container">
-        <div>
-            <form class="signUp" id="signupForm">
-                <h1 class="signUpTitle">
-                <img class="catsize" src="{% static 'assets/signcat.png' %}" alt="">
-                 Sign in 
-                <img class="dogsize" src="{% static 'assets/signdog.png' %}" alt="">
-                </h1>
-                <div>
-                    <input type="text" class="signUpInput" placeholder="Type your username" autofocus required>
-                    <input type="password" class="signUpInput" placeholder="Choose a password" required>
-                    <input type="submit" value="Login start!" class="signUpButton">
-                </div>
-                <div class="singupButton">
-                    <button type="button" class="btn btn-secondary">SignUp</button>
-                </div>
-            </form>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                            </div>
+                            <input class="form-control" placeholder="******" type="password">
+                        </div> 
+                    </div> 
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-primary btn-block"> Login  </button>
+                            </div> 
+                        </div>
+                        <div class="col-md-6 text-right">
+                            <a href="" class="float-right btn btn-outline-primary">Sign up</a>
+                        </div>                                            
+                    </div>                                                                  
+                </form>
+            </article>
         </div>
-       
     </div>
 {% endblock %}
