--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -6,7 +6,69 @@
 {% endblock %}
 
 {% block contents %}<!--여기 안에다 코딩 해주시면 됩니다.-->
-    <div class="container">
-        <h1>signup</h1>
+
+    <div class="container" style="margin-top:10px;">
+        <div class="card">
+            <article class="card-body mx-auto" style="max-width: 400px;">
+                <h4 class="card-title mt-3 text-center">Create Account</h4>
+                <p class="text-center">Get started with your free account</p>
+
+                <form method="POST" action="{% url 'signup' %}">
+                    {% csrf_token %}
+                    <div class="form-group input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                        </div>
+                        <input name="users" class="form-control" placeholder="Full name" type="text">
+                    </div>
+
+                    <div class="form-group input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
+                        </div>
+                        <input name="username" class="form-control" placeholder="Email address" type="email">
+                    </div> 
+                    <div class="form-group input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"> <i class="fa fa-phone"></i> </span>
+                        </div>
+                        <select class="custom-select" style="max-width: 120px;">
+                            <option selected="">+082</option>
+                            <option value="1">+086</option>
+                            <option value="2">+081</option>
+                            <option value="3">+063</option>
+                        </select>
+                        <input name="phonenumber" class="form-control" placeholder="Phone number" type="text">
+                    </div> 
+                    <div class="form-group input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"> <i class="fa fa-building"></i> </span>
+                        </div>
+                        <select class="form-control">
+                            <option selected=""> Select job type</option>
+                            <option>Designer</option>
+                            <option>Manager</option>
+                            <option>Accaunting</option>
+                        </select>
+                    </div> 
+                    <div class="form-group input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                        </div>
+                        <input name="password1" class="form-control" placeholder="Create password" type="password">
+                    </div> 
+                    <div class="form-group input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                        </div>
+                        <input name="password2" class="form-control" placeholder="Repeat password" type="password">
+                    </div>                                    
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary btn-block"> Create Account  </button>
+                    </div>     
+                    <p class="text-center">Have an account? <a href="{% url 'signin' %}">Log In</a> </p>                                                                 
+                </form>
+            </article>
+        </div>
     </div>
 {% endblock %}
