--- a/accounts/templates/signin.html
+++ b/accounts/templates/signin.html
@@ -50,7 +50,8 @@
                         <div class="col-md-6 text-right">
                             <a href="{% url 'signup' %}" class="float-right btn btn-outline-primary">Sign up</a>
                         </div>                                            
-                    </div>                                                                  
+                    </div>
+                    <p style="color:red;">{{error}}</p>                                                                 
                 </form>
             </article>
         </div>
