--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -66,8 +66,10 @@
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary btn-block"> Create Account  </button>
                     </div>     
-                    <p class="text-center">Have an account? <a href="{% url 'signin' %}">Log In</a> </p>                                                                 
+                    <p class="text-center">Have an account? <a href="{% url 'signin' %}">Log In</a> </p>     
+                    <p style="color:red">{{error}}</p>                                                            
                 </form>
+                
             </article>
         </div>
     </div>
