--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -10,7 +10,7 @@
     <div class="container" style="margin-top:10px;">
         <div class="card">
             <article class="card-body mx-auto" style="max-width: 400px;">
-                <h4 class="card-title mt-3 text-center">Create Account</h4>
+                <h4 class="card-title mt-3 text-center">Create Account Page</h4>
                 <p class="text-center">Get started with your free account</p>
 
                 <form method="POST" action="{% url 'signup' %}">
