--- a/animalShop/templates/animalShop.html
+++ b/animalShop/templates/animalShop.html
@@ -2,7 +2,7 @@
 
 {% block import %}<!--css파일 import 부분, 해당 폴더 안에있는 static 파일에서 작업-->
     {% load staticfiles %}
-    <link rel="stylesheet" href="{% static "css/animalShop.css" %}" >
+    <link rel="stylesheet" href="{% static "css/animalShop.css" %}?ver=1">
 {% endblock %}
 
 {% block contents %}<!--여기 안에다 코딩 해주시면 됩니다.-->
