--- a/kindAnimal/templates/kindAnimal.html
+++ b/kindAnimal/templates/kindAnimal.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block import %}
     {% load staticfiles %}
-    <link rel="stylesheet" href="{% static "css/kindAnimal.css" %}" >
+    <link rel="stylesheet" href="{% static "css/kindAnimal.css" %}?ver=1" >
 {% endblock %}
 
 {% block contents %}
