--- a/accounts/templates/signin.html
+++ b/accounts/templates/signin.html
@@ -2,7 +2,7 @@
 
 {% block import %}
     {% load staticfiles %}
-    <link rel="stylesheet" href="{% static "css/signin.css" %}" >
+    <link rel="stylesheet" href="{% static "css/signin.css" %}?ver=1" >
 {% endblock %}
 
 {% block contents %}
@@ -48,8 +48,11 @@
                             </div> 
                         </div>
                         <div class="col-md-6 text-right">
-                            <a href="{% url 'signup' %}" class="float-right btn btn-outline-primary">Sign up</a>
-                        </div>                                            
+                            <div class="form-group">
+                                <a href="{% url 'signup' %}" class="float-right btn btn-outline-primary">Sign up</a>
+                            </div> 
+                        </div>    
+                                                           
                     </div>
                     <p style="color:red;">{{error}}</p>                                                                 
                 </form>
