--- a/personal/templates/personal.html
+++ b/personal/templates/personal.html
@@ -2,7 +2,7 @@
 
 {% block import %}<!--css파일 import 부분, 해당 폴더 안에있는 static 파일에서 작업-->
     {% load staticfiles %}
-    <link rel="stylesheet" href="{% static "css/animalShop.css" %}" >
+    <link rel="stylesheet" href="{% static "css/animalShop.css" %}?ver=1" >
 {% endblock %}
 
 {% block contents %}<!--여기 안에다 코딩 해주시면 됩니다. personal은 로그인 아이디마다 다른 화면이 보이도록 설계해야함. -->
