--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,7 +9,8 @@ body {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   word-break: break-all;
-  font-family: "Heebo", sans-serif;
+  background: #dedede !important;
+  font-family: "Ubuntu", sans-serif;
 }
 
 a {
@@ -124,7 +125,7 @@ ul {
 }
 
 .header-area > .nvb > .nvb-m.show {
-  height: 310px;
+  height: 265px;
 }
 
 .header-area > .nvb > .nvb-m > .nav-item {
