--- a/personal/templates/personal.html
+++ b/personal/templates/personal.html
@@ -1,13 +1,52 @@
-{% extends 'base.html' %}<!--메뉴 가져오기 위해-->
+{% extends 'base.html' %}
+<!--메뉴 가져오기 위해-->
 
-{% block import %}<!--css파일 import 부분, 해당 폴더 안에있는 static 파일에서 작업-->
-    {% load staticfiles %}
-    <link rel="stylesheet" href="{% static "css/animalShop.css" %}?ver=1" >
+{% block import %}
+<!--css파일 import 부분, 해당 폴더 안에있는 static 파일에서 작업-->
+{% load staticfiles %}
+<link rel="stylesheet" href="{% static "css/animalShop.css" %}?ver=1">
 {% endblock %}
 
-{% block contents %}<!--여기 안에다 코딩 해주시면 됩니다. personal은 로그인 아이디마다 다른 화면이 보이도록 설계해야함. -->
-                    <!--model 만들고 각 유저마다 데이터를 따로 저장하여 보여줘야함.. 어려움-->
+{% block contents %}
+<!--여기 안에다 코딩 해주시면 됩니다. personal은 로그인 아이디마다 다른 화면이 보이도록 설계해야함. -->
+<!--model 만들고 각 유저마다 데이터를 따로 저장하여 보여줘야함.. 어려움-->
+
+<div class="container">
+    <!--<h1>personal</h1>
+    <br>
+    <a href="{% url 'write' %}" class="btn btn-outline-dark" role="button" aria-pressed="true">글쓰기</a>
+    <br><br>
+    {% for personal in personals.all %}
     <div class="container">
-        <h1>personal</h1>
+        <h3>{{ personal.title }}</h3>
+        <p>{{ personal.summary }}<a href="{% url 'detail' personal.id %}"><br>...MORE</a></p>
     </div>
+    {% endfor %}-->
+    <br>
+    <br>
+    <br>
+    {% for personal in personals.all %}
+    <div class="row mb-2">
+        <div class="col-md-100" >
+            <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                <div class="col p-4 d-flex flex-column position-static" >
+                    <h3 class="mb-0">{{ personal.title }}</h3>
+                    <br>
+                    <p class="card-text mb-auto">{{ personal.summary }}</p>
+                    <a href="{% url 'detail' personal.id %}" class="stretched-link">Continue reading</a>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                    <svg class="bd-placeholder-img" width="250" height="250" xmlns="http://www.w3.org/2000/svg"
+                        preserveAspectRatio="xMidYMid slice" focusable="false" role="img"
+                        aria-label="Placeholder: Thumbnail">
+                        <title>Placeholder</title>
+                        <rect width="100%" height="100%" fill="#55595c" />
+                        <text x="50%" y="50%" fill="#eceeef">사진 왜안떠ㅠㅠ</text>
+                    </svg>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
 {% endblock %}
