--- a/likelionProject/templates/base.html
+++ b/likelionProject/templates/base.html
@@ -17,6 +17,9 @@
         <!-- fonts -->
 	    <link href="https://fonts.googleapis.com/css?family=Heebo|Noto+Sans+KR" rel="stylesheet">
 
+        <!--map api-->
+        <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=022qu25s9i"></script>
+
         <!--static file을 간단히 불러오기 위해 사용-->
         {% load staticfiles %}
         <link rel="stylesheet" href="{% static "css/base.css" %}?ver=1" >
