--- a/animalShop/templates/animalShop.html
+++ b/animalShop/templates/animalShop.html
@@ -2,11 +2,48 @@
 
 {% block import %}<!--css파일 import 부분, 해당 폴더 안에있는 static 파일에서 작업-->
     {% load staticfiles %}
-    <link rel="stylesheet" href="{% static "css/animalShop.css" %}?ver=1">
+    <link rel="stylesheet" href="{% static "css/animalShop.css" %}?ver=1.1">
 {% endblock %}
 
 {% block contents %}<!--여기 안에다 코딩 해주시면 됩니다.-->
     <div class="container">
-        <h1>animalShop</h1>
+         <h1 class="my-4">Animal Shop
+            <h4>Animal Shop 정보를 나타내주는 페이지 입니다.</h4>
+        </h1>   
+
+         <div class="card">
+            <div class="row">
+                <div class="col-md-9"> 
+                    <div id="map" style="width:100%;height:400px;"></div>
+                </div>
+                <div class="col-md-3">
+                    <button type="button" class="btn btn-success">Success</button>
+                    <button type="button" class="btn btn-success">Success</button>
+                </div>
+            </div>
+        </div>
+        <script>
+            var HOME_PATH = window.HOME_PATH || '.';
+            var position = new naver.maps.LatLng(37.3849483, 127.1229117);
+
+            var map = new naver.maps.Map('map', {
+                center: position,
+                zoom: 14
+            });
+
+            var markerOptions = {
+                position: position.destinationPoint(90, 15),
+                map: map,
+                icon: {
+                    url: HOME_PATH +'/img/example/sally.png',
+                    size: new naver.maps.Size(50, 52),
+                    origin: new naver.maps.Point(0, 0),
+                    anchor: new naver.maps.Point(25, 26)
+                }
+            };
+
+            var marker = new naver.maps.Marker(markerOptions);
+        </script>
+
     </div>
 {% endblock %}
