--- a/personal/templates/detail.html
+++ b/personal/templates/detail.html
@@ -12,20 +12,22 @@
 <!--model 만들고 각 유저마다 데이터를 따로 저장하여 보여줘야함.. 어려움-->
 
 <div class="container">
-    <h1>Detail Page</h1>
     <br>
-    <div class="container">
-        <h3>제목 : {{ personal.title }}</h3>
-        <p>날짜 : {{ personal.pub_date }}</p>
-        <br>
-        <img class="img-fluid rounded mb-3 mb-md-0" style="width:100%; max-width:300px; height:100%; max-height:300px;"
+    <div class="alert alert-light" role="alert">
+        <h3>{{ personal.title }}</h3>
+        <p class="card-text"><small class="text-muted">{{ personal.pub_date }}</small></p>
+    </div>
+    <div class="alert alert-light" role="alert">
+            <img class="img-fluid rounded mb-3 mb-md-0" style="width:100%; max-width:300px; height:100%; max-height:300px;"
             src="{{personal.image.url}}" alt="">
         <br><br><br>
-        <p>{{ personal.body }}</p>
+        <h5>{{ personal.body }}</h5>
         <br>
-        <br>
-        <a href="{% url 'personal' %}">돌아가기</a>
-    </div>
+    </div>  
+<br>
+    <a class="alert alert-light" href="{% url 'personal' %}" role="button">돌아가기</a>
 </div>
+
+
 <br><br>
 {% endblock %}
