personal check, conflict

--- a/mainPage/templates/mainPage.html
+++ b/mainPage/templates/mainPage.html
@@ -16,12 +16,15 @@
                             <h2 class="font-weight-bolder">Your Story Starts With Us</h2>
                         </div>
                         <div class="col-md-5" style="font-size:1.2rem">
-                                <p>짤막한 카페 설명 넣을 예정입니다. 카페 메뉴 구성은 대략 ~
-                                반려동물 종류~, 반려동물 shop 과 food, Map 등등
+                                <p>카페 구성은 다음과 같습니다.<br><br>
+                                    1. 반려동물 종류 페이지(Kind)<br>
+                                    2. 개인 반려동물 소개 페이지(Personal)<br>
+                                    3. 애견용품, 사료 추천 페이지(Goods)<br>
+                                    4. 애견 Shop 페이지(Shop)<br>
                             </p>
-                            <button type="button" class="ml-3 px-4 py-2 btn btn-danger">
+                            <button type="button" onClick="location.href='https://www.youtube.com/watch?v=AS-O9etZ_qo'" class="ml-3 px-4 py-2 btn btn-danger">
                                 <i class="fas fa-caret-right mr-1"></i>
-                                관련 비디오 넣을 예정
+                                반려동물 소개 영상
                             </button>
                         </div>
                     </div>
@@ -42,7 +45,7 @@
                 <div id="product" class="col-md-6 mx-auto">
                     <div class="text-center mt-5 mb-5">
                         <div class="product-title font-weight-bold sectionheader">
-                            <h3>Let's Talk(Cafe 만든 이유)</h3>
+                            <h3>Animal Cafe 만든 이유</h3>
                         </div>
                         <div class="product-description text-muted">
                             The number of dogs and cats abandoned on the street is greater than I thought. 
@@ -190,7 +193,7 @@
         <div id="team" class="our-team">
             <div class="container mx-auto">
                 <div class="text-center mt-5 mb-5 sectionheader">
-                    <h3 class="font-weight-bold">Here is our team(개발 팀원 소개 어떤가요?)</h3>
+                    <h3 class="font-weight-bold">Animal Shop</h3>
                 </div>
             </div>
         </div>
@@ -369,7 +372,7 @@
                 <div clas="container">
             <div class="mainsection text-center mt-5 mb-5">
                 <div class="work-title mb-5 header">
-                    <h3 class="font-weight-bold">Work with us</h3>
+                    <h3 class="font-weight-bold">도움이 필요하다면 ..</h3>
                 </div>
                 <div class="content workcolor small">
                     Divide details about your product or agency work into parts. 
