--- a/personal/templates/detail.html
+++ b/personal/templates/detail.html
@@ -26,6 +26,7 @@
     </div>  
 <br>
     <a class="alert alert-light" href="{% url 'personal' %}" role="button">돌아가기</a>
+    <a class="alert alert-light" href="{% url 'delete' personal.id %}" role="button">[삭제]</a>
 </div>
 
 
