--- a/animalGoods/templates/animalGoods.html
+++ b/animalGoods/templates/animalGoods.html
@@ -7,6 +7,51 @@
 
 {% block contents %}<!--여기 안에다 코딩 해주시면 됩니다.-->
     <div class="container">
-        <h1>animalGoods</h1>
+    <br>
+    
+        <img src={% static 'assets/main.jpg' %} width=100% height=300 >
     </div>
+    <br>
+    <center><a href = "{% url 'write' %}" class="btn btn-outline-dark" role="button" aria-pressed="true">글쓰기 </a> </center>
+<br>
+{% for goods in goodss.all %}
+<div class=container>
+
+<div class="card" >
+    <div class="card-body">
+      <h2 class="card-title">제품명:{{goods.title}}</h2>
+      <h6 class="card-subtitle mb-2 text-muted">설명:{{goods.body}}</h6>
+
+      <!--샤진-->
+      <img class="img-fluid rounded mb-3 mb-md-0" style="width:100%; max-width:300px; height:100%; max-height:300px;"
+            src="{{goods.image.url}}" alt="">
+      <!--<img  src="{{goods.image.url}}" class="card-img-top"/>-->
+      
+      <!--댓글달기 소스는 여기에--> 
+      {% for comment in comments.all%} 
+        <div class="comment">
+          <div class="date">{{comment.pup_date}}</div>
+          <strong>{{comment.author}}</strong>
+          <p>{{ comment.comment }}</p>
+        </div>
+       
+        {% endfor %}
+           <br>
+       <!--댓글 폼 -->
+      <form action="{% url 'comment'  %}" method="POST">
+      {% csrf_token %}
+         <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="덧글을 남겨주세요!" name="text" id="text" aria-describedby="button-addon2">
+          </input>
+          <div class="input-group-append">
+             <input class="btn btn-outline-secondary" type="submit" id="button-addon2" value="댓글"></input>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+<br><br>
+{% endfor %}
+
+    
 {% endblock %}
