--- a/animalShop/templates/animalShop.html
+++ b/animalShop/templates/animalShop.html
@@ -17,32 +17,95 @@
                     <div id="map" style="width:100%;height:400px;"></div>
                 </div>
                 <div class="col-md-3">
-                    <button type="button" class="btn btn-success">Success</button>
-                    <button type="button" class="btn btn-success">Success</button>
+                    <button type="button" id="to-jeju" class="btn btn-success">제주도</button>
+                    <button type="button" id="to-busan" class="btn btn-success">부산</button>
+                    <button type="button" id="to-seoul" class="btn btn-success">서울</button>
+                    <button type="button" id="to-1" class="btn btn-success">가까이 보기</button>
                 </div>
             </div>
         </div>
         <script>
-            var HOME_PATH = window.HOME_PATH || '.';
-            var position = new naver.maps.LatLng(37.3849483, 127.1229117);
+           (function () {
+            var jeju = new naver.maps.LatLng(33.3590628, 126.534361),
+                busan = new naver.maps.LatLng(35.1797865, 129.0750194),
+                seoul = new naver.maps.LatLng(37.5666103, 126.9783882);
+                    
+
+            var nuriPoint = new naver.maps.LatLng(37.5795423, 126.8897844);
+            var sbsPoint = new naver.maps.LatLng(37.579847, 126.8929304);
+            var middlePoint = new naver.maps.LatLng(37.5666805, 126.9784147);
 
             var map = new naver.maps.Map('map', {
-                center: position,
-                zoom: 14
+                center: middlePoint,
+                zoom: 11,
+                enableWheelZoom: true,
+                enableDragPan: true,
+                enableDblClickZoom: false,
+                mapMode: 0,
+                activateTrafficMap: false,
+                activateBicycleMap: false,
+                minMaxLevel: [1, 14],
+                zoomControl: true,
+                zoomControlOptions: {
+                    position: naver.maps.Position.TOP_RIGHT
+                }
             });
 
-            var markerOptions = {
-                position: position.destinationPoint(90, 15),
-                map: map,
-                icon: {
-                    url: HOME_PATH +'/img/example/sally.png',
-                    size: new naver.maps.Size(50, 52),
-                    origin: new naver.maps.Point(0, 0),
-                    anchor: new naver.maps.Point(25, 26)
-                }
-            };
+            $("#to-jeju").on("click", function(e) {
+                e.preventDefault();
+                map.setZoom(6, true);
+                map.setCenter(jeju);
+            });
 
-            var marker = new naver.maps.Marker(markerOptions);
+            $("#to-1").on("click", function(e) {
+                e.preventDefault();
+                map.setZoom(11, true);
+            });
+            
+            $("#to-busan").on("click", function(e) {
+                e.preventDefault();
+                map.panTo(busan);
+            });
+
+            $("#to-seoul").on("click", function(e) {
+                e.preventDefault();
+                map.setZoom(6, true);
+                map.panTo(seoul);
+            });
+
+            $("#panBy").on("click", function(e) {
+                e.preventDefault();
+
+                map.panBy(new naver.maps.Point(10, 10));
+            });
+
+
+            new naver.maps.Marker({
+                position: nuriPoint,
+                icon: {
+                    content: '<div style="width:100px;"><img src="http://static.naver.net/maps/v3/pin_default.png" alt="" ' +
+                    'style="margin: 0; padding: 0; border: 0 solid transparent; display: block; max-width: none; ' +
+                    'max-height: none; -webkit-user-select: none; position: absolute; width: 22px; height: 35px; left: 0; top: 0;"/>' +
+                    '<div style="position: absolute; top: 40px; left: -60px; color: black; font-weight: bold; font-size: 15px;">상암 누리꿈 스퀘어</div></div>',
+                    size: new naver.maps.Size(28, 37),
+                    anchor: new naver.maps.Point(11, 35)
+                },
+                map: map
+            });
+
+            new naver.maps.Marker({
+                position: sbsPoint,
+                icon: {
+                    content: '<div style="width:100px;"><img src="http://static.naver.net/maps/v3/pin_default.png" alt="" ' +
+                    'style="margin: 0; padding: 0; border: 0 solid transparent; display: block; max-width: none; ' +
+                    'max-height: none; -webkit-user-select: none; position: absolute; width: 22px; height: 35px; left: 0; top: 0;"/>' +
+                    '<div style="position: absolute; top: 40px; left: -60px; color: darkcyan; font-weight: bold; font-size: 15px;">상암 SBS 프리즘타워</div></div>',
+                    size: new naver.maps.Size(28, 37),
+                    anchor: new naver.maps.Point(11, 35)
+                },
+                map: map
+            });
+        })();
         </script>
 
     </div>
