--- a/personal/templates/writePerson.html
+++ b/personal/templates/writePerson.html
@@ -12,7 +12,7 @@
 <!--model 만들고 각 유저마다 데이터를 따로 저장하여 보여줘야함.. 어려움-->
 
 <div class="container">
-    <form action="{% url 'create' %}" method="POST" enctype="multipart/form-data">
+    <form action="{% url 'createPerson' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <br><br>
         <h4>제목: </h4>
