--- a/mainPage/templates/mainPage.html
+++ b/mainPage/templates/mainPage.html
@@ -209,21 +209,23 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <figure>
-                                            <img class="img-fluid mr-4 shadow  mb-2 bg-white rounded" src="{% static 'assets/adult-boy-casual-220453.jpg' %}" alt="">
+                                            <img class="img-fluid mr-4 shadow  mb-2 bg-white rounded" src="{% static 'assets/person1.jpg' %}" alt="">
                                         </figure>
                                     </div>
                                 
                                     <div class="col-md-8">
                                         <div class="media-body">
                                             <div class="team-member-name mt-0">
-                                                <h6 class="font-weight-bold">경민</h6>
+                                                <h6 class="font-weight-bold">더 왈츠</h6>
                                             </div>
                                             <div class="member-designation mt-0">
-                                                    <p class="small text-muted">Computer Engineering</p>
+                                                    <p class="small text-muted">강남 애견 카페</p>
                                             </div>
                                             <div class="member-description">
-                                                <p class="small text-muted">Are you successful in making cafes Like lion (animal Cafe)? 
-                                                Let's go, let's go!</p>
+                                                <p class="small text-muted">주소 : 서울특별시 강남구 역삼동 역삼로 134<br>
+                                                연락처 : 02-564-0927<br>
+                                                영업시간 : 오전 11:00 ~ 오후 10:00
+                                                </p>
                                             </div>
                                             <div class="member-socialmedia">
                                                 <p><i class="fab fa-twitter ml-3"></i><i
@@ -247,7 +249,7 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <figure>
-                                            <img class="img-fluid shadow  mb-2 bg-white rounded" src="{% static 'assets/person.png' %}" alt="">
+                                            <img class="img-fluid shadow  mb-2 bg-white rounded" src="{% static 'assets/person2.jpg' %}" alt="">
                                             
                                         </figure>
                                     </div>
@@ -255,14 +257,16 @@
                                     <div class="col-md-8">
                                         <div class="media-body">
                                             <div class="team-member-name mt-0">
-                                                <h6 class="font-weight-bold">하은</h6>
+                                                <h6 class="font-weight-bold">써니네 애견카페</h6>
                                             </div>
                                             <div class="member-designation mt-0">
-                                                <p class="small text-muted">전공</p>
+                                                <p class="small text-muted">서울 애견 카페</p>
                                             </div>
                                             <div class="member-description">
-                                                <p class="small text-muted">Are you successful in making cafes Like lion (animal Cafe)? 
-                                                Let's go, let's go!</p>
+                                                <p class="small text-muted">주소 : 서울특별시 마포구 동교동 169-29<br>
+                                                연락처 : 02-334-8212<br>
+                                                영업시간 : 오전 10:00 ~ 오후 10:00
+                                                </p>
                                             </div>
                                             <div class="member-socialmedia">
                                                 <p><i class="fab fa-linkedin-in ml-3"></i></i>
@@ -287,21 +291,23 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <figure>
-                                        <img class="img-fluid shadow  mb-2 bg-white rounded" src="{% static 'assets/person.png' %}" alt="">
+                                        <img class="img-fluid shadow  mb-2 bg-white rounded" src="{% static 'assets/person3.jpg' %}" alt="">
                                     </figure>
                                 </div>
 
                                 <div class="col-md-8">
                                     <div class="media-body">
                                         <div class="team-member-name mt-0">
-                                            <h6 class="font-weight-bold">소연</h6>
+                                            <h6 class="font-weight-bold">카페도기</h6>
                                         </div>
                                         <div class="member-designation mt-0">
-                                            <p class="small text-muted">전공</p>
+                                            <p class="small text-muted">경기도 애견 카페</p>
                                         </div>
                                         <div class="member-description">
-                                            <p class="small text-muted">Are you successful in making cafes Like lion (animal Cafe)? 
-                                                Let's go, let's go!</p>
+                                            <p class="small text-muted">주소 : 경기도 수원시 영통구 이의동 1276-1번지<br>
+                                            연락처 : 031-217-7741<br>
+                                            영업시간 : 오전 10:00 ~ 오후 10:00
+                                            </p>
                                         </div>
                                         <div class="member-socialmedia">
                                             <p><i class="fab fa-youtube ml-3"></i></i>
@@ -327,21 +333,23 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <figure>
-                                            <img class="img-fluid shadow  mb-2 bg-white rounded" src="{% static 'assets/person.png' %}" alt="">
+                                            <img class="img-fluid shadow  mb-2 bg-white rounded" src="{% static 'assets/person4.jpg' %}" alt="">
                                         </figure>
                                     </div>
 
                                     <div class="col-md-8">
                                         <div class="media-body">
                                             <div class="team-member-name mt-0">
-                                                <h6 class="font-weight-bold">희진</h6>
+                                                <h6 class="font-weight-bold">멍뭉 애견카페</h6>
                                             </div>
                                             <div class="member-designation mt-0">
-                                                <p class="small text-muted">전공</p>
+                                                <p class="small text-muted">대구 애견카페</p>
                                             </div>
                                             <div class="member-description">
-                                                <p class="small text-muted">Are you successful in making cafes Like lion (animal Cafe)? 
-                                                Let's go, let's go!</p>
+                                                <p class="small text-muted">주소 : 대구광역시 달서구 두류3동 495-17<br>
+                                                연락처 : 070-4098-5789<br>
+                                                영업시간 : 오전 10:00 ~ 오후 11:00
+                                                </p>
                                             </div>
                                             <div class="member-socialmedia">
                                                 <p><i class="fab fa-linkedin-in ml-3"></i>
