--- a/animalShop/templates/animalShop.html
+++ b/animalShop/templates/animalShop.html
@@ -10,17 +10,30 @@
          <h1 class="my-4">Animal Shop
             <h4>Animal Shop 정보를 나타내주는 페이지 입니다.</h4>
         </h1>   
-
+            
          <div class="card">
             <div class="row">
                 <div class="col-md-9"> 
                     <div id="map" style="width:100%;height:400px;"></div>
                 </div>
                 <div class="col-md-3">
-                    <button type="button" id="to-jeju" class="btn btn-success">제주도</button>
-                    <button type="button" id="to-busan" class="btn btn-success">부산</button>
-                    <button type="button" id="to-seoul" class="btn btn-success">서울</button>
-                    <button type="button" id="to-1" class="btn btn-success">가까이 보기</button>
+                    <br>
+                    <h2 style="font-weight: bold;">지역 이동</h2>
+                    <div>
+                        <button type="button" id="to-seoul" class="btn btn-outline-danger">서울</button>
+                    </div>
+                    <div>
+                        <button type="button" id="to-Gyunggi" class="btn btn-outline-primary">경기</button>
+                    </div>
+                    <div>
+                        <button type="button" id="to-busan" class="btn btn-outline-success">부산</button>
+                    </div>
+                    <div>
+                        <button type="button" id="to-jeju" class="btn btn-outline-warning">제주도</button>
+                    </div>
+                    <div>
+                        <button type="button" id="to-1" class="btn btn-outline-dark">가까이 보기</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -28,11 +41,16 @@
            (function () {
             var jeju = new naver.maps.LatLng(33.3590628, 126.534361),
                 busan = new naver.maps.LatLng(35.1797865, 129.0750194),
-                seoul = new naver.maps.LatLng(37.5666103, 126.9783882);
-                    
+                seoul = new naver.maps.LatLng(37.5666103, 126.9783882),
+                gyunggi = new naver.maps.LatLng(37.275052,127.009447);
 
             var nuriPoint = new naver.maps.LatLng(37.5795423, 126.8897844);
             var sbsPoint = new naver.maps.LatLng(37.579847, 126.8929304);
+            var kicPoint =  new naver.maps.LatLng(37.3849483, 127.1229117);
+            var kic2Point =  new naver.maps.LatLng(37.275052,127.009447);
+            var kic3Point =  new naver.maps.LatLng(37.375052,127.109447);
+            var kic4Point =  new naver.maps.LatLng(37.375042,127.139447);
+
             var middlePoint = new naver.maps.LatLng(37.5666805, 126.9784147);
 
             var map = new naver.maps.Map('map', {
@@ -66,7 +84,10 @@
                 e.preventDefault();
                 map.panTo(busan);
             });
-
+            $("#to-Gyunggi").on("click", function(e) {
+                e.preventDefault();
+                map.panTo(gyunggi);
+            });
             $("#to-seoul").on("click", function(e) {
                 e.preventDefault();
                 map.setZoom(6, true);
@@ -83,10 +104,10 @@
             new naver.maps.Marker({
                 position: nuriPoint,
                 icon: {
-                    content: '<div style="width:100px;"><img src="http://static.naver.net/maps/v3/pin_default.png" alt="" ' +
+                    content: '<div style="width:100px;"><img src="{% static 'assets/pic1.jpg' %}" alt="" ' +
                     'style="margin: 0; padding: 0; border: 0 solid transparent; display: block; max-width: none; ' +
                     'max-height: none; -webkit-user-select: none; position: absolute; width: 22px; height: 35px; left: 0; top: 0;"/>' +
-                    '<div style="position: absolute; top: 40px; left: -60px; color: black; font-weight: bold; font-size: 15px;">상암 누리꿈 스퀘어</div></div>',
+                    '<div style="position: absolute; top: 40px; left: -60px; color: black; font-weight: bold; font-size: 13px;">상암 누리꿈 스퀘어</div></div>',
                     size: new naver.maps.Size(28, 37),
                     anchor: new naver.maps.Point(11, 35)
                 },
@@ -96,16 +117,69 @@
             new naver.maps.Marker({
                 position: sbsPoint,
                 icon: {
-                    content: '<div style="width:100px;"><img src="http://static.naver.net/maps/v3/pin_default.png" alt="" ' +
+                    content: '<div style="width:100px;"><img src="{% static 'assets/pic2.jpg' %}"" alt="" ' +
                     'style="margin: 0; padding: 0; border: 0 solid transparent; display: block; max-width: none; ' +
                     'max-height: none; -webkit-user-select: none; position: absolute; width: 22px; height: 35px; left: 0; top: 0;"/>' +
-                    '<div style="position: absolute; top: 40px; left: -60px; color: darkcyan; font-weight: bold; font-size: 15px;">상암 SBS 프리즘타워</div></div>',
+                    '<div style="position: absolute; top: 40px; left: -30px; color: black; font-weight: bold; font-size: 13px;">도몽 애견카페</div></div>',
+                    size: new naver.maps.Size(28, 37),
+                    anchor: new naver.maps.Point(11, 35)
+                },
+                map: map
+            });
+
+            new naver.maps.Marker({
+                position: kicPoint,
+                icon: {
+                    content: '<div style="width:100px;"><img src="{% static 'assets/pic3.jpg' %}"" alt="" ' +
+                    'style="margin: 0; padding: 0; border: 0 solid transparent; display: block; max-width: none; ' +
+                    'max-height: none; -webkit-user-select: none; position: absolute; width: 22px; height: 35px; left: 0; top: 0;"/>' +
+                    '<div style="position: absolute; top: 40px; left: -30px; color: black; font-weight: bold; font-size: 13px;">애견카페 개그멍</div></div>',
+                    size: new naver.maps.Size(28, 37),
+                    anchor: new naver.maps.Point(11, 35)
+                },
+                map: map
+            });
+
+            new naver.maps.Marker({
+                position: kic2Point,
+                icon: {
+                    content: '<div style="width:100px;"><img src="{% static 'assets/pic4.jpg' %}"" alt="" ' +
+                    'style="margin: 0; padding: 0; border: 0 solid transparent; display: block; max-width: none; ' +
+                    'max-height: none; -webkit-user-select: none; position: absolute; width: 22px; height: 35px; left: 0; top: 0;"/>' +
+                    '<div style="position: absolute; top: 40px; left: -30px; color: black; font-weight: bold; font-size: 13px;">바우하우스</div></div>',
+                    size: new naver.maps.Size(28, 37),
+                    anchor: new naver.maps.Point(11, 35)
+                },
+                map: map
+            });
+
+            new naver.maps.Marker({
+                position: kic3Point,
+                icon: {
+                    content: '<div style="width:100px;"><img src="{% static 'assets/pic5.jpg' %}"" alt="" ' +
+                    'style="margin: 0; padding: 0; border: 0 solid transparent; display: block; max-width: none; ' +
+                    'max-height: none; -webkit-user-select: none; position: absolute; width: 22px; height: 35px; left: 0; top: 0;"/>' +
+                    '<div style="position: absolute; top: 40px; left: -30px; color: black; font-weight: bold; font-size: 13px;">애견 호영카페</div></div>',
+                    size: new naver.maps.Size(28, 37),
+                    anchor: new naver.maps.Point(11, 35)
+                },
+                map: map
+            });
+
+            new naver.maps.Marker({
+                position: kic4Point,
+                icon: {
+                    content: '<div style="width:100px;"><img src="{% static 'assets/pic6.jpg' %}"" alt="" ' +
+                    'style="margin: 0; padding: 0; border: 0 solid transparent; display: block; max-width: none; ' +
+                    'max-height: none; -webkit-user-select: none; position: absolute; width: 22px; height: 35px; left: 0; top: 0;"/>' +
+                    '<div style="position: absolute; top: 40px; left: -30px; color: black; font-weight: bold; font-size: 13px;">유 블렌스 카페</div></div>',
                     size: new naver.maps.Size(28, 37),
                     anchor: new naver.maps.Point(11, 35)
                 },
                 map: map
             });
         })();
+
         </script>
 
     </div>
